--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.0",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.1.6",
